--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.floway.flowayapp"
     },
     "web": {
       "bundler": "metro",
@@ -32,6 +33,15 @@
     "experiments": {
       "typedRoutes": true
     },
-    "newArchEnabled": true
+    "newArchEnabled": true,
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "322043eb-a978-4c6d-a7d7-f504a68dddef"
+      }
+    },
+    "owner": "floway"
   }
 }
