--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   "jest": {
     "preset": "jest-expo"
   },
+  "expo": {
+    "doctor" : {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.0",
