--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "preset": "jest-expo"
   },
   "expo": {
-    "doctor" : {
+    "doctor": {
       "reactNativeDirectoryCheck": {
         "listUnknownPackages": false
       }
@@ -23,9 +23,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.18",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
@@ -45,8 +47,7 @@
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13",
-    "expo-dev-client": "~5.0.6"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
