--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "format": "prettier --write ."
   },
   "jest": {
     "preset": "jest-expo"
@@ -55,8 +56,13 @@
     "@types/proj4": "^2.5.5",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~8.0.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.2",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "prettier": "^3.4.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
