--- a/app.json
+++ b/app.json
@@ -12,35 +12,46 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.floway.flowayapp"
+    "plugins": [
+      [
+        "expo-document-picker",
+        {
+          "iCloudContainerEnvironment": "Production"
+        }
+      ]
+    ]
+  },
+  "ios": {
+    "supportsTablet": true,
+    "bundleIdentifier": "com.floway.flowayapp"
+  },
+  "android": {
+    "adaptiveIcon": {
+      "foregroundImage": "./assets/images/adaptive-icon.png",
+      "backgroundColor": "#ffffff"
     },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.floway.flowayapp"
+    "package": "com.floway.flowayapp"
+  },
+  "web": {
+    "bundler": "metro",
+    "output": "static",
+    "favicon": "./assets/images/favicon.png"
+  },
+  "plugins": [
+    "expo-router"
+  ],
+  "experiments": {
+    "typedRoutes": true
+  },
+  "newArchEnabled": true,
+  "extra": {
+    "router": {
+      "origin": false
     },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": ["expo-router"],
-    "experiments": {
-      "typedRoutes": true
-    },
-    "newArchEnabled": true,
-    "extra": {
-      "router": {
-        "origin": false
-      },
-      "eas": {
-        "projectId": "322043eb-a978-4c6d-a7d7-f504a68dddef"
-      }
-    },
-    "owner": "floway"
-  }
+    "eas": {
+      "projectId": "322043eb-a978-4c6d-a7d7-f504a68dddef"
+    }
+  },
+  "owner": "floway"
 }
+
