--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-document-picker": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
