--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --go",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -24,32 +24,34 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-picker/picker": "^2.10.2",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.18",
+    "expo": "^52.0.27",
+    "expo-av": "~15.0.2",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.6",
+    "expo-dev-client": "~5.0.10",
+    "expo-document-picker": "~13.0.2",
     "expo-font": "~13.0.1",
     "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.3",
-    "expo-router": "4.0.11",
-    "expo-secure-store": "^14.0.0",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-updates": "~0.26.13",
+    "expo-web-browser": "~14.0.2",
     "proj4": "^2.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13",
-    "expo-document-picker": "~13.0.2"
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -62,7 +64,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.3",
     "prettier": "^3.4.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
