--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.0",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.27",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.3",
@@ -34,6 +35,7 @@
     "expo-font": "~13.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
+    "expo-location": "~18.0.5",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.21",
