--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
@@ -68,6 +69,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "prettier": "^3.4.2",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
