--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "date-fns": "^4.1.0",
     "expo": "^52.0.27",
     "expo-av": "~15.0.2",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "~17.0.5",
     "expo-dev-client": "~5.0.10",
     "expo-document-picker": "~13.0.2",
+    "expo-file-system": "~18.0.7",
     "expo-font": "~13.0.1",
+    "expo-keep-awake": "~14.0.2",
     "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.4",
+    "expo-linking": "~7.0.5",
     "expo-location": "~18.0.5",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
@@ -47,6 +49,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-background-actions": "^4.0.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
@@ -54,8 +57,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "expo-file-system": "~18.0.7"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
