--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.0",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.27",
+    "expo": "~52.0.28",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.5",
-    "expo-dev-client": "~5.0.10",
+    "expo-dev-client": "~5.0.11",
     "expo-document-picker": "~13.0.2",
-    "expo-file-system": "~18.0.7",
+    "expo-file-system": "~18.0.8",
     "expo-font": "~13.0.1",
     "expo-keep-awake": "~14.0.2",
     "expo-linear-gradient": "~14.0.2",
@@ -43,7 +43,7 @@
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
-    "expo-updates": "~0.26.13",
+    "expo-updates": "~0.26.15",
     "expo-web-browser": "~14.0.2",
     "proj4": "^2.14.0",
     "react": "18.3.1",
