--- a/package.json
+++ b/package.json
@@ -27,28 +27,28 @@
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.0",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.28",
+    "expo": "~52.0.42",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.5",
-    "expo-dev-client": "~5.0.11",
-    "expo-document-picker": "~13.0.2",
+    "expo-dev-client": "~5.0.19",
+    "expo-document-picker": "~13.0.3",
     "expo-file-system": "~18.0.8",
     "expo-font": "~13.0.1",
     "expo-keep-awake": "~14.0.2",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-location": "~18.0.5",
-    "expo-router": "~4.0.17",
+    "expo-location": "~18.0.10",
+    "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.21",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-updates": "~0.26.15",
+    "expo-system-ui": "~4.0.9",
+    "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
     "proj4": "^2.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.9",
     "react-native-background-actions": "^4.0.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
@@ -58,7 +58,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -71,7 +72,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~52.0.6",
     "prettier": "^3.4.2",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
