--- a/.editorconfig
+++ b/.editorconfig
@@ -7,8 +7,6 @@ root = true
 [*]
 charset = utf-8                  # Encodage des fichiers en UTF-8
 end_of_line = lf                 # Utilisation de LF pour les fins de ligne (Unix)
-indent_style = space             # Utilisation d'espaces pour l'indentation
-indent_size = 4                  # Taille de l'indentation : 4 espaces
 insert_final_newline = true      # Ajoute une nouvelle ligne à la fin du fichier
 trim_trailing_whitespace = true  # Supprime les espaces en fin de ligne
 
@@ -16,6 +14,8 @@ trim_trailing_whitespace = true  # Supprime les espaces en fin de ligne
 [*.{js,jsx,ts,tsx}]
 indent_style = space             # Utilise des espaces pour l'indentation
 indent_size = 2                  # 2 espaces pour les fichiers JavaScript et TypeScript
+quote_type = single              # Utilise des guillemets simples
+max_line_length = 100           # Longueur maximale de ligne
 
 # Règles spécifiques aux fichiers JSON
 [*.json]
@@ -30,6 +30,7 @@ indent_size = 2                  # 2 espaces pour les fichiers CSS et HTML
 # Règles spécifiques aux fichiers Markdown
 [*.md]
 trim_trailing_whitespace = false # Autorise les espaces en fin de ligne pour Markdown
+max_line_length = off           # Pas de limite de longueur pour Markdown
 
 # Règles spécifiques aux fichiers YAML et YAML-like (yml, etc.)
 [*.{yml,yaml}]
