--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,10 +29,5 @@
     "metro.config.js",
     "declarations.d.ts"
   ],
-  "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
-  ]
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
