--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "zod": "^3.24.2",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-speech": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
