--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "react-native-web": "~0.19.13",
     "zod": "^3.24.2",
     "zustand": "^5.0.3",
-    "expo-speech": "~13.0.1"
+    "expo-speech": "~13.0.1",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
