--- a/app.json
+++ b/app.json
@@ -43,7 +43,14 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.floway.flowayapp",
       "infoPlist": {
-        "UIBackgroundModes": ["location", "fetch", "audio"],
+        "UIBackgroundModes": [
+          "location",
+          "fetch",
+          "audio",
+          "location",
+          "fetch",
+          "audio"
+        ],
         "NSLocationUsageDescription": "Floway needs access to location when open to track your running sessions.",
         "NSLocationWhenInUseUsageDescription": "Floway needs access to location when open to track your running sessions.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "Floway needs access to location to track your running sessions even when the app is in background.",
@@ -51,7 +58,8 @@
         "NSLocationAlwaysUsageDescription": "Floway needs access to your location at all times to track your running sessions.",
         "NSCameraUsageDescription": "Floway needs access to your camera to take a profile picture.",
         "NSPhotoLibraryUsageDescription": "Floway needs access to your library to choose a profile picture.",
-        "NSPhotoLibraryAddUsageDescription": "Floway needs to save photos to your library."
+        "NSPhotoLibraryAddUsageDescription": "Floway needs to save photos to your library.",
+        "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
@@ -67,7 +75,12 @@
         "FOREGROUND_SERVICE",
         "RECORD_AUDIO",
         "WRITE_EXTERNAL_STORAGE",
-        "READ_EXTERNAL_STORAGE"
+        "READ_EXTERNAL_STORAGE",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_BACKGROUND_LOCATION",
+        "android.permission.FOREGROUND_SERVICE",
+        "android.permission.FOREGROUND_SERVICE_LOCATION"
       ]
     },
     "web": {
