--- a/package.json
+++ b/package.json
@@ -22,69 +22,73 @@
       }
     }
   },
+  "overrides": {
+    "lucide-react-native": {
+      "react": "^19"
+    }
+  },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.0.0",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.46",
-    "expo-av": "~15.0.2",
-    "expo-constants": "~17.0.5",
-    "expo-dev-client": "~5.0.19",
-    "expo-document-picker": "~13.0.3",
-    "expo-file-system": "~18.0.8",
-    "expo-font": "~13.0.1",
-    "expo-keep-awake": "~14.0.2",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-location": "~18.0.10",
-    "expo-router": "~4.0.21",
-    "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-updates": "~0.27.4",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.0",
+    "expo-av": "~15.1.7",
+    "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
+    "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
+    "expo-image-picker": "~16.1.4",
+    "expo-keep-awake": "~14.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-location": "~18.1.6",
+    "expo-router": "~5.1.4",
+    "expo-secure-store": "~14.2.3",
+    "expo-speech": "~13.1.7",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
+    "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.488.0",
     "proj4": "^2.14.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.55.0",
-    "react-native": "0.76.9",
+    "react-native": "0.79.5",
     "react-native-background-actions": "^4.0.1",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
     "zod": "^3.24.2",
-    "zustand": "^5.0.3",
-    "expo-speech": "~13.0.1",
-    "expo-image-picker": "~16.0.6"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@svgr/cli": "^8.1.0",
     "@types/jest": "^29.5.12",
     "@types/proj4": "^2.5.5",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~8.0.1",
+    "eslint-config-expo": "~9.2.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.9",
     "prettier": "^3.4.2",
     "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
