--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-av": "~15.1.7",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.6",
     "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
@@ -46,6 +47,7 @@
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
+    "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.3",
     "expo-speech": "~13.1.7",
