Add MQTT connection management to session screen

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.488.0",
+    "mqtt": "^5.13.3",
     "proj4": "^2.14.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
