--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.20.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
